Fix segmentation fault in mysqlcheck when the last table checked with --auto-repair mode returned an error (such as being a merge table). (Bug #9492)

client/mysqlcheck.c:
  When testing whether the last table should be added to the list of tables to
  be repaired, we don't have a valid row[] to look at, so don't.